++ push : Cleaned UI code, expanded claim for Multiplayer extending