@@ -3,42 +3,33 @@ package com.iseria.ui;
 import com.iseria.domain.*;
 import com.iseria.infra.*;
 import com.iseria.service.RumorPersistenceService;
-import com.iseria.service.RumorService;
 import com.iseria.service.SoundAudioService;
 import org.apache.commons.io.output.ByteArrayOutputStream;
-import org.apache.poi.ss.usermodel.Row;
-import org.apache.poi.ss.usermodel.Sheet;
-import org.apache.poi.ss.usermodel.Workbook;
-import org.apache.poi.ss.usermodel.WorkbookFactory;
 
 import javax.swing.*;
 import java.io.ByteArrayInputStream;
-import java.io.File;
 import java.io.ObjectInputStream;
 import java.io.ObjectOutputStream;
 import java.time.LocalDateTime;
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
 import static com.iseria.ui.Main.SerializationDiagnostic.diagnoseCurrentState;
-import static org.apache.poi.ss.util.DateParser.parseDate;
 
 public class Main {
     public static void main(String[] args) {
         SwingUtilities.invokeLater(() -> {
 
             IAudioService audioService = new SoundAudioService();
-            IHexRepository hexRepository = HexRepositoryFactory.create();;
+            IHexRepository hexRepository = HexRepositoryFactory.create();
 
 
             diagnoseCurrentState(hexRepository);
             var hexes = hexRepository.loadSafeAll();
-           // System.out.println("Loaded " + hexes.size() + " hexes");
+            ///System.out.println("Loaded " + hexes.size() + " hexes");
             new Login(audioService, hexRepository).setVisible(true);
         });
-        //testSerialization();
+        ///testSerialization();
     }
     public static void testSerialization() {
         RumorPersistenceService service = new RumorPersistenceService();
@@ -49,16 +40,17 @@ public class Main {
 
         // Test sauvegarde/chargement
         try {
-            service.saveRumors(Arrays.asList(testRumor));
+            service.saveRumors(List.of(testRumor));
             List<Rumor> loaded = service.loadRumors();
-            System.out.println("🎉 Sérialisation fonctionnelle ! Rumeurs chargées: " + loaded.size());
+            System.out.println("Sérialisation fonctionnelle ! Rumeurs chargées: " + loaded.size());
         } catch (Exception e) {
-            System.err.println("🔥 Erreur persistance: " + e.getMessage());
+            System.err.println("Erreur persistance: " + e.getMessage());
         }
     }
-    public class SerializationDiagnostic {
+    public static class SerializationDiagnostic {
         public static void diagnoseCurrentState(IHexRepository repo) {
-            System.out.println("🔍 DIAGNOSTIC SERIALIZATION ISSUES");
+            System.out.println("DIAGNOSTIC SERIALIZATION ISSUES");
+            UIHelpers.logseparator();
 
             Map<String, SafeHexDetails> allHexes = repo.loadSafeAll();
             int totalHexes = allHexes.size();
@@ -73,26 +65,26 @@ public class Main {
 
                 if (key == null) {
                     nullKeys++;
-                    System.err.println("❌ NULL KEY found!");
+                    System.err.println("NULL KEY found!");
                     continue;
                 }
 
                 if (hex == null) {
                     nullValues++;
-                    System.err.println("❌ NULL VALUE for key: " + key);
+                    System.err.println("NULL VALUE for key: " + key);
                     continue;
                 }
 
                 if (!key.equals(hex.getHexKey())) {
                     keyMismatches++;
-                    System.err.println("❌ KEY MISMATCH: map='" + key + "', hex='" + hex.getHexKey() + "'");
+                    System.err.println("KEY MISMATCH: map='" + key + "', hex='" + hex.getHexKey() + "'");
                     continue;
                 }
 
                 validHexes++;
             }
 
-            System.out.println("📊 RESULTS:");
+            System.out.println("RESULTS:");
             System.out.println("  Total entries: " + totalHexes);
             System.out.println("  Valid hexes: " + validHexes);
             System.out.println("  NULL keys: " + nullKeys);
@@ -100,18 +92,16 @@ public class Main {
             System.out.println("  Key mismatches: " + keyMismatches);
 
             if (nullKeys > 0 || nullValues > 0 || keyMismatches > 0) {
-                System.err.println("🚨 PHANTOM HEXES DETECTED!");
+                System.err.println("PHANTOM HEXES DETECTED!");
             } else {
-                System.out.println("✅ No phantom hexes detected");
+                System.out.println("No phantom hexes detected");
             }
-
-            // Test basic serialization
             testBasicSerialization(allHexes);
         }
 
         private static void testBasicSerialization(Map<String, SafeHexDetails> hexes) {
-            System.out.println("🧪 Testing basic serialization...");
-
+            System.out.println("Testing basic serialization...");
+            UIHelpers.logseparator();
             try {
                 ByteArrayOutputStream baos = new ByteArrayOutputStream();
                 ObjectOutputStream oos = new ObjectOutputStream(baos);
@@ -121,20 +111,20 @@ public class Main {
                 oos.close();
 
                 byte[] serializedData = baos.toByteArray();
-                System.out.println("✅ Serialization successful, size: " + serializedData.length + " bytes");
+                System.out.println("Serialization successful, size: " + serializedData.length + " bytes");
 
                 // Test deserialization
                 ByteArrayInputStream bais = new ByteArrayInputStream(serializedData);
                 ObjectInputStream ois = new ObjectInputStream(bais);
 
                 @SuppressWarnings("unchecked")
-                Map<String, HexDetails> deserialized = (Map<String, HexDetails>) ois.readObject();
+                Map<String, SafeHexDetails> deserialized = (Map<String, SafeHexDetails>) ois.readObject();
                 ois.close();
 
-                System.out.println("✅ Deserialization successful, size: " + deserialized.size());
+                System.out.println("Deserialization successful, size: " + deserialized.size());
 
             } catch (Exception e) {
-                System.err.println("❌ Basic serialization test failed: " + e.getMessage());
+                System.err.println("Basic serialization test failed: " + e.getMessage());
                 e.printStackTrace();
             }
         }
